tests/expectations/compiler/statements/expr_statement_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:10:9
     |
  10 |         a + b;
     |         ^^^^^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:11:9
     |
  11 |         flag ? a : b;
     |         ^^^^^^^^^^^^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:12:9
     |
  12 |         foo.a;
     |         ^^^^^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:13:9
     |
  13 |         Foo {
  14 |             a: a,
  15 |         };
     |         ^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:16:9
     |
  16 |         a;
     |         ^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:17:9
     |
  17 |         1u8;
     |         ^^^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:18:9
     |
  18 |         -i8;
     |         ^^^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:19:9
     |
  19 |         1field;
     |         ^^^^^^^
"""]
